--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 </li>
                 <br>
                 <br>
-                <div class="card mb-3">
+                <div class="card mb-3 p-2">
                   <div class="card-body">
                     <h3 class="card-title">Kontak</h3>
                     <h6>Jalan Raya Bawang No. 65 Pondok Cabe, Jakarta</h6>
                     <h6>08123456890</h6>
-                    <h6 class="d-none d-lg-block">08714142142121</h6>
+                    <h6 class="d-none d-lg-block">Line: Fulanmhd</h6>
                     <h6>fulanmuhammad@gmail.com</h6>
                     <a href="https://linkedin.com" class="card-link d-lg-none">LinkedIn</a>
                     <a href="https://google.com" class="card-link d-lg-none">Website</a>
@@ -104,7 +104,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2012-2015</td>
+                  <td>2016</td>
                   <td>
                     <h5>Ketua Pramuka SMA Negeri 1 Jombang</h5>
                     <p>Sebagai ketua Pramuka, saya mengoordinasikan semua kegiatan selama satu tahun penuh.<p>
@@ -120,16 +120,16 @@
             <h3 class="bg-primary text-white">Riwayat Kepanitiaan</h3>
               <tbody>
                 <tr>
-                  <td class="td-20">2012</td>
+                  <td class="td-20">2017</td>
                   <td>
                     <h5>Ketua Pelaksana 17 Agustusan 2017</h5>
                     <p>Sebagai ketua pelaksana, saya mengoordinasikan semua divisi untuk menyelenggarakan 17an yang meriah.</p>
                   </td>
                 </tr>
                 <tr>
-                  <td>2012-2015</td>
+                  <td>2018</td>
                   <td>
-                    <h5>Ketua Lomba Isra' Mi'raj</h5>
+                    <h5>Ketua Lomba Isra' Mi'raj 2018</h5>
                     <p>Sebagai ketua lomba, saya mengoordinasikan semua kegiatan selama satu hari penuh.<p>
                     </td>
                 </tr>
